--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -12,22 +12,27 @@
     
     <plurals name="time_ago_minutes">
         <item quantity="one">%d minute</item>
-		<item quantity="other">%d minutes</item>
+		<item quantity="few">%d minutes</item>
+   		<item quantity="other">%d minutes</item>
 	</plurals>
     <plurals name="time_ago_hours">
         <item quantity="one">%d hour</item>
+		<item quantity="few">%d hours</item>
         <item quantity="other">about %d hours</item>
     </plurals>
     <plurals name="time_ago_days">
         <item quantity="one">%d day</item>
+		<item quantity="few">%d days</item>
         <item quantity="other">%d days</item>
     </plurals>
     <plurals name="time_ago_months">
         <item quantity="one">%d month</item>
+		<item quantity="few">%d months</item>
         <item quantity="other">%d months</item>
     </plurals>
     <plurals name="time_ago_years">
         <item quantity="one">%d year</item>
+		<item quantity="few">%d years</item>
         <item quantity="other">%d years</item>
     </plurals>        
 
