--- a/android-timeago/src/main/res/values-es/strings.xml
+++ b/android-timeago/src/main/res/values-es/strings.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="time_ago_prefix"></string>
-    <string name="time_ago_suffix">ago</string>
+    <string name="time_ago_prefix">hace</string>
+    <string name="time_ago_suffix"></string>
 
-    <string name="time_ago_seconds">less than a minute</string>
-    <string name="time_ago_minute">about a minute</string>
-    <string name="time_ago_hour">about an hour</string>
-    <string name="time_ago_day">a day</string>
-    <string name="time_ago_month">about a month</string>
-    <string name="time_ago_year">about a year</string>
+    <string name="time_ago_seconds">menos de un minuto</string>
+    <string name="time_ago_minute">un minuto</string>
+    <string name="time_ago_hour">una hora</string>
+    <string name="time_ago_day">un día</string>
+    <string name="time_ago_month">un mes</string>
+    <string name="time_ago_year">un año</string>
 
     <plurals name="time_ago_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="other">%d minutes</item>
-        <item quantity="many">%d minutes</item>
+        <item quantity="one">un minuto</item>
+        <item quantity="other">%d minutos</item>
+        <item quantity="many">de %d minutos</item>
     </plurals>
     <plurals name="time_ago_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">about %d hours</item>
-        <item quantity="many">about %d hours</item>
+        <item quantity="one">una hora</item>
+        <item quantity="other">%d horas</item>
+        <item quantity="many">de %d horas</item>
     </plurals>
     <plurals name="time_ago_days">
-        <item quantity="one">%d day</item>
-        <item quantity="other">%d days</item>
-        <item quantity="many">%d days</item>
+        <item quantity="one">una día</item>
+        <item quantity="other">%d días</item>
+        <item quantity="many">de %d días</item>
     </plurals>
     <plurals name="time_ago_months">
-        <item quantity="one">%d month</item>
-        <item quantity="other">%d months</item>
-        <item quantity="many">%d months</item>
+        <item quantity="one">un mes</item>
+        <item quantity="other">%d meses</item>
+        <item quantity="many">de %d meses</item>
     </plurals>
     <plurals name="time_ago_years">
-        <item quantity="one">%d year</item>
-        <item quantity="other">%d years</item>
-        <item quantity="many">%d years</item>
+        <item quantity="one">un año</item>
+        <item quantity="other">%d años</item>
+        <item quantity="many">de %d año</item>
     </plurals>
 </resources>
